force-app/main/default/objects/Catalog_Delta_Work_Item__c/Catalog_Delta_Work_Item__c.object-meta.xml
<CustomObject>
    <label>Catalog Delta Work Item</label>
    <nameField>
        <displayFormat>WORK-{00000000}</displayFormat>
        <label>Work Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Delta Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>