force-app/main/default/objects/Catalog_Delta_Work_Item__c/fields/DedupeKey__c.field-meta.xml
<CustomField>
    <fullName>DedupeKey__c</fullName>
    <description>Unique run, kind, and record ID key used to make discovery idempotent.</description>
    <externalId>true</externalId>
    <label>Dedupe Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>