force-app/main/default/objects/Catalog_Delta_Work_Item__c/fields/IsExportCandidate__c.field-meta.xml
<CustomField>
    <fullName>IsExportCandidate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this product is part of a root family selected for final scoped export.</description>
    <label>Is Export Candidate</label>
    <type>Checkbox</type>
</CustomField>