force-app/main/default/objects/Catalog_Delta_Work_Item__c/fields/IsImpacted__c.field-meta.xml
<CustomField>
    <fullName>IsImpacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when a supported source change identified this product.</description>
    <label>Is Impacted</label>
    <type>Checkbox</type>
</CustomField>