force-app/main/default/objects/Catalog_Delta_Work_Item__c/fields/IsRoot__c.field-meta.xml
<CustomField>
    <fullName>IsRoot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this product is a changed product-family root.</description>
    <label>Is Root</label>
    <type>Checkbox</type>
</CustomField>