force-app/main/default/objects/Catalog_Delta_Work_Item__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <label>Kind</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Product</fullName><default>false</default><label>Product</label></value>
            <value><fullName>Category</fullName><default>false</default><label>Category</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>