force-app/main/default/objects/Catalog_Delta_Work_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Catalog Delta Work Items</relationshipLabel>
    <relationshipName>CatalogDeltaWorkItems</relationshipName>
    <type>Lookup</type>
</CustomField>