force-app/main/default/objects/Catalog_Delta_Work_Item__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Category</label>
    <referenceTo>ProductCategory</referenceTo>
    <relationshipLabel>Catalog Delta Work Items</relationshipLabel>
    <relationshipName>CatalogDeltaWorkItems</relationshipName>
    <type>Lookup</type>
</CustomField>