force-app/main/default/objects/Catalog_Delta_Work_Item__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <label>Delta Run</label>
    <referenceTo>Catalog_Delta_Run__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>WorkItems</relationshipName>
    <type>MasterDetail</type>
</CustomField>