force-app/main/default/objects/Catalog_Delta_Work_Item__c/fields/TraversalDepth__c.field-meta.xml
<CustomField>
    <fullName>TraversalDepth__c</fullName>
    <description>Breadth-first category or product-family traversal depth.</description>
    <label>Traversal Depth</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>